<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="49dp"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:hint="@string/usuario"
        android:textColor="@color/black"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="Autofill" />

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        android:fontFamily="serif"
        android:hint="@string/contra"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="27dp"
        android:text="@string/login"
        android:onClick="validarUsuario"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_registrar" />

    <Button
        android:id="@+id/tv_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="163dp"
        android:text="@string/registrar"
        android:onClick="RegistrarUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>